# lol-replay-recorder-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  test.yml
docs/: PUBLISHING.md
docs/plans/: 2025-11-29-poetry-to-uv-migration.md  2025-11-29-python-port-design.md  2025-11-29-python-port-implementation.md  2025-11-30-maintainability-refactoring-design.md  2025-11-30-pypi-distribution-design.md  2025-11-30-pypi-distribution.md  2025-11-30-reusable-workflows-design.md
src/lol_replay_recorder/: __init__.py  constants.py
src/lol_replay_recorder/apis/: __init__.py  ini_editor.py  yaml_editor.py
src/lol_replay_recorder/clients/: __init__.py
src/lol_replay_recorder/clients/http/: __init__.py  base.py  constants.py  lcu.py  riot.py
src/lol_replay_recorder/controllers/: __init__.py  constants.py  league_client.py  league_client_ux.py  league_replay_client.py  riot_game_client.py  window_handler.py
src/lol_replay_recorder/domain/: __init__.py  errors.py
src/lol_replay_recorder/domain/entities/: __init__.py  summoner.py
src/lol_replay_recorder/models/: __init__.py  custom_error.py  lcu_request.py  metadata_types.py  replay_type.py  riot_request.py  riot_types.py
src/lol_replay_recorder/protocols/: __init__.py  config_editor.py  http_client.py  window_manager.py
src/lol_replay_recorder/services/: __init__.py
src/lol_replay_recorder/utils/: __init__.py  utils.py
tests/unit/: test_constants.py  test_custom_error.py  test_http_clients.py  test_lcu_request.py  test_locale.py  test_metadata_types.py  test_process_manager.py  test_replay_type.py  test_riot_request.py  test_riot_types.py  test_summoner.py  test_utils.py
tests/unit/apis/: test_ini_editor.py  test_yaml_editor.py
tests/unit/controllers/: test_league_client.py  test_league_client_ux.py  test_league_replay_client.py  test_riot_game_client.py  test_window_handler.py
tests/unit/domain/: __init__.py  test_entities.py  test_types.py
tests/unit/protocols/: test_config_editor.py
(+19 files in other folders)
