[project]
name = "lol-replay-recorder"
version = "0.1.0"
description = "A Python library to record League of Legends replays"
authors = [{name = "wooto"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pywin32>=306; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "lol_replay_recorder", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests requiring League client",
    "unit: Unit tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.ruff]
line-length = 100
target-version = "py310"